# slot-runner

./: .gitignore  CLAUDE.md  PIPELINE_ARCHITECTURE.md  README.md
Src/SLOTRUNNER/: index.html  package-lock.json  package.json  projects.example.json  vite.config.ts  vitest.config.ts  xlab_job.json  xlab_job2.json  xlab_job3.json  xlab_job_A.json  xlab_job_B.json
Src/SLOTRUNNER/src/: App.css  App.tsx  main.tsx
Src/SLOTRUNNER/src-tauri/: Cargo.toml  tauri.conf.json
Src/SLOTRUNNER/src-tauri/capabilities/: default.json
Src/SLOTRUNNER/src-tauri/icons/: icon.icns
Src/SLOTRUNNER/src-tauri/resources/: append-event.js
Src/SLOTRUNNER/src-tauri/src/: config.rs  lib.rs  main.rs
Src/SLOTRUNNER/src-tauri/src/domain/: job.rs  mod.rs
Src/SLOTRUNNER/src-tauri/src/infra/: context_usage.rs  gate.rs  hook_installer.rs  hooks_bus.rs  mod.rs  pty.rs  rest_server.rs
Src/SLOTRUNNER/src/components/: EndOfRunModal.tsx  JobBridge.tsx  NotificationBridge.tsx  PtyTerminal.tsx  SlotPanel.tsx  StageController.tsx
Src/SLOTRUNNER/src/lib/: config.ts  context.ts  gate.ts  hooks.ts  jobs.ts  pty.ts
Src/SLOTRUNNER/src/store/: useAppStore.test.ts  useAppStore.ts
docs/: ARCHITECTURE.md
docs/.rules/: BEHAVIORAL_GUIDELINES_RULES.md  CLASS_STRUCTURE_RULES.md  OBJECT_ORIENTED_DESIGN_RULES.md
docs/.templates/: ADR-TEMPLATE.md  ARCHITECTURE-TEMPLATE.md  CLAUDE-TEMPLATE.md  DOCUMENT_GUIDE.md  FC-TEMPLATE.md  FRD-TEMPLATE.md  PRD-TEMPLATE.md  README-TEMPLATE.md  UI_GUIDE-TEMPLATE.md
docs/.templates/.rules/: DDD_ARCHITECTURE_RULES.md  LOGGING_RULES.md
docs/.templates/App/: APP-ADR-CATALOG-TEMPLATE.md  APP-ARCHITECTURE-TEMPLATE.md  APP-FC-TEMPLATE.md  APP-PRD-TEMPLATE.md
docs/.templates/App/ADR/: APP-ADR-001-TEMPLATE.md
docs/SLOTRUNNER/: SLOTRUNNER-ADR-CATALOG.md  SLOTRUNNER-ARCHITECTURE.md  SLOTRUNNER-FC.md  SLOTRUNNER-PRD.md
docs/SLOTRUNNER/ADR/: SLOTRUNNER-ADR-001.md  SLOTRUNNER-ADR-002.md  SLOTRUNNER-ADR-003.md  SLOTRUNNER-ADR-004.md  SLOTRUNNER-ADR-005.md  SLOTRUNNER-ADR-006.md  SLOTRUNNER-ADR-007.md  SLOTRUNNER-ADR-008.md  SLOTRUNNER-ADR-009.md  SLOTRUNNER-ADR-010.md
docs/SLOTRUNNER/FRD/: SLOTRUNNER-FRD-001.md  SLOTRUNNER-FRD-002.md  SLOTRUNNER-FRD-003.md  SLOTRUNNER-FRD-004.md
(+2 files in other folders)
