[package]
name = "slotrunner"
version = "0.1.0"
description = "SlotRunner — Monday→Slack→파이프라인을 N슬롯 Claude Code 세션으로 구동하는 상시 REST 오케스트레이터"
authors = ["Claude Code (Anthropic)"]
edition = "2021"

[lib]
# Tauri 2: 라이브러리 크레이트(run())를 main.rs 가 호출. 데스크톱+모바일 공용.
name = "slotrunner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 봇→앱 동기 REST 인테이크 (ADR-001). 127.0.0.1 바인드. 동기·자체 스레드, 비동기 런타임 미도입.
tiny_http = "0.12"
# 잡 식별자 생성.
uuid = { version = "1", features = ["v4"] }
# 슬롯별 로컬 PTY (Claude Code/셸 실행). Windows ConPTY / Unix pty 추상화 (ADR-002 슬롯=세션).
portable-pty = "0.9"
# Claude Hook 이벤트 파일 IPC (events.jsonl tail).
notify = "6"
# 데스크톱 토스트 알림 — 슬롯 입력대기(스톨)·완료/실패를 백그라운드 운영자에게 통지(F008).
tauri-plugin-notification = "2"

# Windows: 슬롯 PTY 자식(claude 등)을 Job Object 에 묶어 앱 종료(크래시 포함) 시 OS 가 트리째 종료
# → 고아 프로세스 누적 방지. windows 0.61 은 tauri 의존과 동일 버전(중복 없음).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
